# Projekt-PSiOv2

./: CMakeLists.txt  SaperGame.cpp  SaperGame.h  SaperSFML.pro  main.cpp
